# bounce

./: .gitattributes  Cargo.toml  README.md
.cargo/: config.toml
assets/levels/: J2MElvl.001  J2MElvl.002  J2MElvl.003  J2MElvl.004  J2MElvl.005  J2MElvl.006  J2MElvl.007  J2MElvl.008  J2MElvl.009  J2MElvl.010  J2MElvl.011
assets/sounds/: pickup.ott  pop.ott  up.ott
src/: assets.rs  main.rs  player.rs  prelude.rs  scene.rs  tile.rs
