[package]
name = "bounce"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
default-run = "bounce"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.9.0"
#bevy_prototype_lyon = "0.7.1"
bevy_editor_pls = "0.2.0"
bevy-inspector-egui = "0.14.0"
smooth-bevy-cameras = "0.5.0"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
byteorder = "1.4.3"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

#[[bin]]
#name = "scratch"
